@@ -727,7 +727,6 @@ function rlist = missing_functions ()
   "edges",
   "empty",
   "enableservice",
-  "endsWith",
   "enumeration",
   "eraseBetween",
   "eventlisteners",
@@ -1185,7 +1184,6 @@ function rlist = missing_functions ()
   "ss2tf",
   "stack",
   "standardizeMissing",
-  "startsWith",
   "stats",
   "step",
   "stopasync",
